--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <title>Soumya Shubham</title>
 </head>
 
 <body>
     <div class="topContainer">
-        <img class="topCloud" src="images/cloud.png" alt="cloud-img">
+        <img class="topCloud" src="cloud.png" alt="cloud-img">
         <h1>I'm Soumya Shubham</h1>
         <h2 class="work">A <span>Web</span> Developer</h2>
-        <img class="btmCloud" src="images/cloud.png" alt="cloud-img">
-        <img src="images/mountain.png" alt="mountain-img">
+        <img class="btmCloud" src="cloud.png" alt="cloud-img">
+        <img src="mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
         <div class="profile">
-            <img class="myPhoto" src="Images/myphoto.jpg" alt="My Photo">
+            <img class="myPhoto" src="myphoto.jpg" alt="My Photo">
             <h2>Hey There!</h2>
             <p class="description">My name is Soumya Shubham. I'm a full stack web developer who feeds on coffee. And of course, I love to play <em><strong>football</strong>.</p>
         </div>
@@ -28,12 +28,12 @@
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="gif" src="Images/giphy.webp" alt="">
+                <img class="gif" src="giphy.webp" alt="">
                 <h3>Web Development</h3>
                 <p>I love to design and develop websites. I've been doing that since I was 17 years old.</p>
             </div>
             <div class="skill-row">
-                <img class="football" src="Images/football wallpaper.avif" alt="football">
+                <img class="football" src="football wallpaper.avif" alt="football">
                 <h3>Playing Football</h3>
                 <p>But of course, my best skill is playing <strong>football</strong>. I've been doing that my entire
                     life.</p>
